tests/cases/ok/functions_and_calls.p4
def helper() -> None:
    x: int = 1
    print(x)

def main() -> None:
    a: int = 5
    b: int = 62
    helper()
    print(a + b)
