tests/cases/fail/string_concat_type.p4
def main() -> None:
    value = "a" + 1
    print(value)
